Added google form link

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ header, footer {
     padding-bottom: 20px;
 }
 
+.imgclass {
+    width: 200px;
+    height: 200px;
+}
 
 body {
     font-family: "Lato", calibri;
@@ -74,7 +78,6 @@ button {
 .imgclass{
     max-width: 250px;
     max-height: 300px;
-    width: 100%;
     border-radius: 5px;
     
 }
